# batman

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.yml  ruff.toml  setup.py
.github/workflows/: test.yml
batman/: __init__.py  units.py
batman/exponentiators/: __init__.py  protocol.py
batman/exponentiators/cram/: __init__.py  coefficients.py  ipfcram.py  magnus.py
batman/graphs/: __init__.py  decay.py  drawing.py  filters.py  matgen.py  reaction.py  types.py
batman/integrator/: __init__.py  predictor.py
batman/models/: __init__.py  decaymodel.py  depletionmodel.py  reactionmodel.py
batman/solver/: __init__.py  activity.py  inputs.py  inputs_dist.py  k_est.py  power_normalization.py  reach_k.py  solve.py  time_est.py  utils.py
tests/: .gitignore  __init__.py  conftest.py  test_analytic.py  test_exp.py  test_graphs.py  test_integrators.py  test_time_est.py
tests/test_data/: download_test_files.sh
